# ai_samples

./: .env.sample  .gitignore  Makefile  README.md  README_mcp.md  README_repos.md  pyproject.toml
.gemini/: mcp_config.example.json
.github/scripts/: ai_reviewer.py  claude-review.sh
.github/workflows/: claude-review.yml
.github/workflows-inactive/: ai_review.yml  claude-review.yml.bck
01-chat/: __init__.py  basic_chat.py
01_chat/: __init__.py  chat_async.py  chat_basic.py  chat_concurrent.py  chat_history.py  chat_safety.py  chat_stream.py
02_function_tools/: tools_basic.py  tools_basic_extended.py  tools_multiple_parallel.py  tools_stream.py
02_tools/: __init__.py  tools_basic.py  tools_basic_extended.py  tools_multiple_parallel.py  tools_stream.py
03_structured_outputs/: __init__.py  structured_basic.py  structured_pydantic.py  structured_pydantic_description.py  structured_pydantic_enum.py  structured_pydantic_function_tool.py  structured_pydantic_nested.py
04_rag/: __init__.py  rag_basic.py
04_rag/chroma_db/: chroma.sqlite3
05_mcp/: __init__.py  mcp_langchain_client_sse.py
05_rag/: rag_basic.py
06_agent_framework/: __init__.py
06_mcp/: README.md  expenses.csv  mcp_basic_http.py  mcp_basic_server_http.py  mcp_basic_server_sse.py  mcp_basic_server_stdio.py  mcp_basic_stdio.py  mcp_langchain_client_http.py  mcp_langchain_client_sse.py
07_frameworks/langchain/: __init__.py
07_frameworks/microsoft_agent_framework/: README.md  __init__.py
07_frameworks/microsoft_agent_framework/azure_ai/: __init__.py  agent_framework_basic.py  agent_framework_basic_agent_stream.py  agent_framework_basic_chat_message.py  agent_framework_basic_chat_message_stream.py  agent_framework_function_tools.py  agent_framework_images_local.py  agent_framework_images_uri.py
07_frameworks/microsoft_agent_framework/azure_ai_agent/: __init__.py  agent_framework_basic_chat_agent.py  agent_framework_function_tools.py
07_frameworks/microsoft_agent_framework/docs/:  Microsoft_Agent_Framework_ChatAgent_vs_ChatMessage.md
0X-multi-agent-orchestration/src/config/: settings.py
0X_multi_agent_orchestration/: config.json  test_openai.py
agents/: openAIClient.py
agents/microsoft_agent_framework/: azure_utils.py
agents/openai/: __init__.py  openai_client.py  print_utils.py
agents/openai/0X_multi_agent_orchestration/: .gitignore  main.py  mcp_data.db  pyproject.toml  quick_start.py
agents/openai/0X_multi_agent_orchestration/src/agents/: action_agent.py  analysis_agent.py
azure/: README.md
azure/deploy_mcp_server/: .env.sample  README_app_docker.md  pyproject.toml
azure/deploy_mcp_server/agents/: langchainv1_http.py
azure/deploy_mcp_server/app/: Dockerfile  entrypoint.sh  opentelemetry_middleware.py  server_http_azure_deployed_mcp.py  server_http_basic_mcp.py
azure/deploy_mcp_server/docs/: README_azure_deployment.md
azure/deploy_mcp_server/infra/: auth_init.ps1  auth_update.ps1  write_env.sh
docs/: azure_deploy.md
multi-agent-orchestration/: .env.example  Makefile  README.md  mcp_data.db  pyproject.toml  test_openai.py
multi-agent-orchestration/src/: __init__.py  cli.py
utils/: agent.py  agentAsyncClient.py  agentClient.py  agent_utils.py  azure_utils.py  print_utils.py
(+83 files in other folders)
