[project]
name = "ai-samples"
version = "0.1.0"
description = "AI agent examples using Python."
authors = ["Fernando Ibanez <me@fibanez.com>"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "agent-framework-azure-ai>=1.0.0b251111",
    "anthropic>=0.74.1",
    "azure-ai-agents>=1.2.0b5",
    "azure-identity>=1.25.1",
    "chromadb>=1.3.5",
    "fastmcp>=2.13.1",
    "langchain>=1.1.0",
    "langchain-core>=1.0.7",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "magentic>=0.41.0",
    "ollama>=0.6.1",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "debugpy>=1.8.17",
]
docs = [
    "mkdocs>=1.6.1",
    "py2docfx>=0.1.22",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312", "py313"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

