[project]
name = "ai-samples"
version = "0.1.0"
description = "AI agent examples using Python."
authors = ["Fernando Ibanez <me@fibanez.com>"]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "azure-ai-agents>=1.1.0",
    "azure-core-tracing-opentelemetry>=1.0.0b12",
    "azure-cosmos>=4.14.3",
    "azure-identity>=1.25.1",
    "azure-monitor-opentelemetry==1.8.3",
    "dotenv-azd>=0.3.0",
    "fastmcp>=2.14.1",
    "logfire>=4.16.0",
    "mcp>=1.25.0",
    "msgraph-sdk>=1.51.0",
    "opentelemetry-instrumentation-starlette==0.60b0",
    "opentelemetry-sdk==1.39.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "debugpy>=1.8.17",
]

[tool.ruff]
line-length = 120
target-version = "py310"
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["D203"]
lint.isort.known-first-party = ["opentelemetry_middleware"]

