[project]
name = "multi-agent-orchestration"
version = "0.1.0"
description = "Modern multi-agent orchestration with LangGraph, OpenAI Agents, and MCP servers"
readme = "README.md"
authors = [
    {name = "Fernando Ibanez", email = "fernando.ibanez.armijo@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "sqlite-utils>=3.37.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
    "asyncio-mqtt>=0.16.0",
    "websockets>=13.1"
]

[project.scripts]
multi-agent = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.10.0",
    "ruff>=0.7.0"
]
